--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["JubBoy333@gmail.com"]
 
 [[bin]]
 
-name = "service"
+name = "rustedflake"
 path = "src/main.rs"
 
 [dependencies.nickel]
@@ -16,3 +16,7 @@ git = "https://github.com/nickel-org/nickel.rs.git"
 [dependencies.lazy_static]
 
 git = "https://github.com/Kimundi/lazy-static.rs.git"
+
+[dependencies.docopt_macros]
+
+git = "https://github.com/docopt/docopt.rs.git"
